--- a/联友生产辅助工具/联友生产辅助工具/联友生产辅助工具.csproj
+++ b/联友生产辅助工具/联友生产辅助工具/联友生产辅助工具.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ly.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
       <SpecificVersion>False</SpecificVersion>
@@ -180,6 +183,7 @@
     <Content Include="Lib\System.Net.Http.WebRequest.dll" />
     <Content Include="Lib\System.Net.Http.WebRequest.xml" />
     <Content Include="Lib\System.Net.Http.xml" />
+    <Content Include="ly.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
