--- a/联友生产辅助工具-bak/联友生产辅助工具/联友生产辅助工具-bak.csproj
+++ b/联友生产辅助工具-bak/联友生产辅助工具/联友生产辅助工具-bak.csproj
@@ -89,11 +89,11 @@
   <ItemGroup>
     <Compile Include="Class\Global.cs" />
     <Compile Include="Class\SelfClass.cs" />
-    <Compile Include="FormMain_WG.cs">
+    <Compile Include="日报表获取系列.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain_WG.Designer.cs">
-      <DependentUpon>FormMain_WG.cs</DependentUpon>
+    <Compile Include="日报表获取系列.Designer.cs">
+      <DependentUpon>日报表获取系列.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -101,31 +101,31 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMain.cs">
+    <Compile Include="日报表.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <Compile Include="日报表.Designer.cs">
+      <DependentUpon>日报表.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMain_WG_Modi.cs">
+    <Compile Include="日报表修改组别系列.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain_WG_Modi.Designer.cs">
-      <DependentUpon>FormMain_WG_Modi.cs</DependentUpon>
+    <Compile Include="日报表修改组别系列.Designer.cs">
+      <DependentUpon>日报表修改组别系列.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <EmbeddedResource Include="日报表.resx">
+      <DependentUpon>日报表.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMain_WG.resx">
-      <DependentUpon>FormMain_WG.cs</DependentUpon>
+    <EmbeddedResource Include="日报表获取系列.resx">
+      <DependentUpon>日报表获取系列.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMain_WG_Modi.resx">
-      <DependentUpon>FormMain_WG_Modi.cs</DependentUpon>
+    <EmbeddedResource Include="日报表修改组别系列.resx">
+      <DependentUpon>日报表修改组别系列.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
