--- a/联友生产辅助工具/联友生产辅助工具/2 联友生产辅助工具.csproj
+++ b/联友生产辅助工具/联友生产辅助工具/2 联友生产辅助工具.csproj
@@ -135,6 +135,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="测试\测试_码垛线排程导入.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="测试\测试_码垛线排程导入.designer.cs">
+      <DependentUpon>测试_码垛线排程导入.cs</DependentUpon>
+    </Compile>
     <Compile Include="生产日报表\日报表修改.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -231,6 +237,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="测试\测试_码垛线排程导入.resx">
+      <DependentUpon>测试_码垛线排程导入.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="生产日报表\日报表修改.resx">
       <DependentUpon>日报表修改.cs</DependentUpon>
     </EmbeddedResource>
