--- a/联友生产辅助工具/联友生产辅助工具/2 联友生产辅助工具.csproj
+++ b/联友生产辅助工具/联友生产辅助工具/2 联友生产辅助工具.csproj
@@ -101,6 +101,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\DataGridViewAutoFilter.cs" />
     <Compile Include="Class\Global.cs" />
     <Compile Include="Class\SelfClass.cs" />
     <Compile Include="FormLogin.cs">
@@ -135,11 +136,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="测试\测试_2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="测试\测试_2.Designer.cs">
+      <DependentUpon>测试_2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="测试\测试_3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="测试\测试_3.Designer.cs">
+      <DependentUpon>测试_3.cs</DependentUpon>
+    </Compile>
     <Compile Include="测试\测试_码垛线排程导入.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="测试\测试_码垛线排程导入.designer.cs">
       <DependentUpon>测试_码垛线排程导入.cs</DependentUpon>
+    </Compile>
+    <Compile Include="玖友\玖友查询物料需求量.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="玖友\玖友查询物料需求量.Designer.cs">
+      <DependentUpon>玖友查询物料需求量.cs</DependentUpon>
     </Compile>
     <Compile Include="生产日报表\日报表修改.cs">
       <SubType>Form</SubType>
@@ -237,6 +256,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="测试\测试_2.resx">
+      <DependentUpon>测试_2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="测试\测试_3.resx">
+      <DependentUpon>测试_3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="测试\测试_码垛线排程导入.resx">
       <DependentUpon>测试_码垛线排程导入.cs</DependentUpon>
     </EmbeddedResource>
