--- a/FlaskClient/01 联友生产辅助工具/1 联友生产辅助工具.csproj
+++ b/FlaskClient/01 联友生产辅助工具/1 联友生产辅助工具.csproj
@@ -428,11 +428,23 @@
     <Compile Include="维护ERP\客户配置维护_存在未勾选的配置.Designer.cs">
       <DependentUpon>客户配置维护_存在未勾选的配置.cs</DependentUpon>
     </Compile>
+    <Compile Include="财务\收集工单工时%28税务%29.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="财务\收集工单工时%28税务%29.Designer.cs">
+      <DependentUpon>收集工单工时%28税务%29.cs</DependentUpon>
+    </Compile>
     <Compile Include="财务\刷新会计科目%28生产%29.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="财务\刷新会计科目%28生产%29.Designer.cs">
       <DependentUpon>刷新会计科目%28生产%29.cs</DependentUpon>
+    </Compile>
+    <Compile Include="财务\工单明细%28生产%29导出.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="财务\工单明细%28生产%29导出.Designer.cs">
+      <DependentUpon>工单明细%28生产%29导出.cs</DependentUpon>
     </Compile>
     <Compile Include="财务\领退料明细%28生产%29导出.cs">
       <SubType>Form</SubType>
@@ -629,8 +641,14 @@
     <EmbeddedResource Include="维护ERP\客户配置维护_存在未勾选的配置.resx">
       <DependentUpon>客户配置维护_存在未勾选的配置.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="财务\收集工单工时%28税务%29.resx">
+      <DependentUpon>收集工单工时%28税务%29.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="财务\刷新会计科目%28生产%29.resx">
       <DependentUpon>刷新会计科目%28生产%29.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="财务\工单明细%28生产%29导出.resx">
+      <DependentUpon>工单明细%28生产%29导出.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="财务\领退料明细%28生产%29导出.resx">
       <DependentUpon>领退料明细%28生产%29导出.cs</DependentUpon>
