--- a/FlaskClient/5 ERP定时任务/5 ERP定时任务.csproj
+++ b/FlaskClient/5 ERP定时任务/5 ERP定时任务.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoLrpPlan.cs" />
+    <Compile Include="AutoLrpPlan2.cs" />
     <Compile Include="BomList.cs" />
     <Compile Include="InvmbBoxSize.cs" />
     <Compile Include="Module\ClassBasic.cs" />
